Fix overflow on history section

--- a/app/assets/stylesheets/pages/home/_history.scss
+++ b/app/assets/stylesheets/pages/home/_history.scss
@@ -3,6 +3,8 @@ section#history {
   height: 100%;
   width: 100%;
   position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
   
   div#history-track {
     position: absolute;
